[package]
name = "roads"
version = "0.1.0"
authors = ["Daniele D'Orazio <d.dorazio96@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
async-std = "1.9"
crossterm = { version = "0.23", features = ["event-stream"] }
opener = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
surf = "2.3"
tui = { version = "0.17", default-features = false, features = ["crossterm"] }
